# KIP

./: a.txt  debug_analyse.py  download_models.py  main.py  pyproject.toml  test.py
exports/: meeting_protokoll_20251204_201132.txt  meeting_protokoll_20251204_201410.txt  meeting_protokoll_20251204_201539.txt  meeting_protokoll_20251204_201758.txt
models/pyannote/speaker-diarization-community-1/.cache/huggingface/download/: .gitattributes.metadata  README.md.metadata  config.yaml.metadata  diarization.gif.metadata
models/pyannote/speaker-diarization-community-1/.cache/huggingface/download/embedding/: README.md.metadata  pytorch_model.bin.metadata
models/pyannote/speaker-diarization-community-1/.cache/huggingface/download/plda/: README.md.metadata  plda.npz.metadata  xvec_transform.npz.metadata
models/pyannote/speaker-diarization-community-1/.cache/huggingface/download/segmentation/: pytorch_model.bin.metadata
